styles/custom/scss/_coreStyles.scss
*,
*:before,
*:after {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

@media (prefers-reduced-motion: reduce) {

	*,
	*::before,
	*::after {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: .01ms !important;
		scroll-behavior: auto !important;
		transition-delay: 0ms !important;
	}
}

::selection {
	background-color: rgb(0, 191, 255);
	color: $black;
	text-shadow: none;
}

.hide {
	display: none;
}


html,
body {
	padding: 0;
	margin: 0;
	background-color: $white;
	font-size: 16px;
	//zoom: .75 !important;
}

body {
	scroll-behavior: smooth !important;
	position: relative !important;
}


header {
	display: flex;
	position: fixed;
	top: 0;
	left: 0;
	padding-top: 10px;
	padding-bottom: 10px;
	width: 100%;
	height: $header-height-mobile;
	z-index: 250;
	transition: all $animationStyle;


	@include bp(m) {
		height: $header-height;
	}

	.header_inner {
		max-width: $max-contentWidth;
		margin: auto;
		display: flex;
		width: 100%;
		justify-content: space-between;
		align-items: center;
		height: $header-height-mobile;
		@extend %container-padding;
		padding-top: 5px !important;
		padding-bottom: 5px !important;
		position: relative;


		a.logo {
			text-decoration: none;
			font-size: 2rem;
			font-family: $font-headings;
			color: $primary;

			@include bp(m) {
				font-size: 2.5rem;
			}
		}

		//.profile-container {
		//	position: absolute;
		//	border-radius: 300px;
		//	right: 100px;
		//	width: 50px;
		//	height: 50px;
		//	cursor: pointer;
		//	display: grid;
		//	place-content: center;
		//	border: 3px solid $white;
		//	transform: scale(.7);

		//	@include bp(m) {
		//		right: 230px;
		//		transform: translateX(-50%) scale(1);
		//	}


		//	a {
		//		line-height: 0;

		//		i {
		//			color: $white;
		//			font-size: 1.25rem;

		//			* {
		//				transition: all $animationStyle 300ms;
		//			}
		//		}

		//	}

		//	&:hover {
		//		background-color: $white;
		//		@include shadow;

		//		i {
		//			color: $black;
		//		}
		//	}
		//}

		& #isolate {
			font-family: $font-headings;

			@include bp(m) {
				padding: 10px 45px;
				border-radius: 200px;
				background-color: $primary;
				color: $white !important;
				transition: all $animationStyle;
				right: 0px;
				
				@include bp(m) {
					font-size: 1rem;
				}

				&:hover {
					@include shadow;
				}
			}
		}


			.navWrapper {
				//background-color: green;
				#navBar {
					background-color: $white;
					background-size: contain;
					background-repeat: no-repeat;
					background-position: bottom;
					min-height: 100vh; //50vh;
					min-width: 100vw; //315px;
					position: absolute;
					left: 0;
					top: 0;
					display: flex;
					align-items: flex-start;
					justify-content: flex-start;
					margin: 0;
					padding-top: 5px;
					transform: translateX(150%);
					padding-left: 0;
					transition: all 350ms ease-in-out 350ms;
					@include frostBG($white);
					@include shadow;
	
					a,
					a:visited,
					a:link, .open & {
						font-size: 1.5rem;
						opacity: 0;
						transition: all 150ms ease-in-out;
						list-style: none !important;

	
						&:hover,
						&:focus,
						&:focus-within,
						&.active {
							color: $accent !important;
	
							&::after {
								width: 0 !important;
								background-color: $black;
							}
						}
					}

					@include bp(lt-m) { // so menu's broken style isnt visible on open/close
						ul {
							height: 100%;
							display: flex;
							flex-direction: column;
							width: 90vw;
							margin-left: auto;
							margin-right: auto;
							margin-top: 10vh;
		
							li {
								list-style: none;
								margin-top: $gap-small;
								text-align: center;
								margin-bottom: $gap-small;
		
								a.nav-link {
									text-decoration: none;
									padding: 10px;
									color: $color-text !important;
									opacity: 1;
								}
		
							}
						}
					}
	
					&.open {
						left: 0;
						transform: translateX(0%);
						margin-top: -10px;
						padding-top: 10px;
					}
	
					
	
					//!DESKTOP
					@include bp(m) {
						opacity: 1 !important;
						transform: translate(0);
						height: auto;
						min-height: unset;
						width: auto;
						display: contents;
						position: fixed;
						z-index: -1;
						min-width: unset;
						margin: auto;
	
						ul {
							display: flex;
							list-style: none;
							margin: 15px 0;
		
							li.nav-item {
								position: relative;
								list-style-type: none !important;
								opacity: 1 !important;

								&:empty, &:last-of-type { //used to hhide empty list item belonging to #isolate link
									display: none !important;
									padding: 10px;
									background-color: red;
								}
		
								@include bp(m) {
									margin: 0 30px;
									flex-direction: row;
									text-align: left;
									width: auto;
									justify-content: center;
								}
		
								@include bp(l) {
									margin: 0 40px;
		
								}
		
								a.nav-link {
									text-decoration: none;
									color: $carbon;
									padding: 10px 0;
									font-family: $font-headings;
									opacity: 1 !important;
		
									@include bp(m) {
										font-size: 1rem;
									}
		
									&::after {
										content: '';
										position: absolute;
										height: 1px;
										background-color: $primary;
										left: 0;
										bottom: 5px;
										width: 0%;
										transition: width $animationStyle;
									}
		
									&:hover,
									&:focus,
									&:focus-within,
									&.active {
										&::after {
											width: 100% !important;
										}
									}
								}
							}
						}
					}
	
				
				}
	
				.burgermenu {
					z-index: 500;
					width: 30px;
					height: 30px;
					top: 30px; //20px;
					right: 30px;
					cursor: pointer;
					position: absolute;
					top: 50%;
					right: 0;
					transform: translate(-50%, -50%) scale(.75);
	
					//::before is top line. relative to .burgermenu. This is initial setup
					&::before,
					&::after {
						content: '';
						height: 1px;
						width: 30px;
						position: absolute;
						transition: all $animationStyle;
						background-color: $carbon;
						border-radius: 100px;
					}
	
					div {
						transition: width 600ms $animation-ease 200ms;
						border-radius: 100px;
					}
	
					//!TODO: this should really use .open class and have no class by default
					&.open {
						div {
							width: 0px;
						}
	
						&::before {
							background-color: $black;
							top: 15px;
							transform: translateY(-50%) rotate(45deg);
						}
	
						&::after {
							background-color: $black;
							bottom: 15px;
							transform: translateY(50%) rotate(315deg);
						}
					}
					&:not(.open) {
						//div is middle line
						div {
							width: 40px;
							background-color: $carbon;
							height: 1px;
							position: absolute;
	
							top: 50%;
							left: 50%;
							transform: translate(-50%, -50%);
	
						}
	
						&::before {
							top: 0;
							transform: translateY(50%);
	
						}
	
						&::after {
							bottom: 0;
							transform: translateY(-50%);
						}
					}
					
	
					//hide buger @ desktop
					@include bp(m) {
						display: none !important;
					}
				}
			}
		
	}




	&.shrink {
		height: 60px;
		@include shadow;
		@include frostBG($white);

		@include bp(m) {
			height: 90px;
		}

		@include bp(lt-m) {
			padding-top: 5px;
		}

		#navBar {
			ul {
				li.nav-item {
					a.nav-link {
						&::after {
							background: $primary !important;
						}

						#isolate {
							background: white !important;
						}
					}
				}
			}
		}

		a,
		a:visited,
		a:link,
		.logo a span {
			color: $carbon !important;
		}

		.profile-container {
			background-color: $white;

			i {
				color: $black !important;

				&.signed-in {
					color: $white !important;
					background-color: $primary-dark !important;
				}
			}


		}

		.burgermenu {

			div,
			&::before,
			&::after {
				background-color: $carbon !important;
			}
		}
	}

	&.pullUp {
		transform: translateY(-100%);
	}
}

section[id] {
	//min-height: 100vh;
	overflow-x: hidden !important; //for Aos

	* {
		transition: all 230ms ease-in-out;
	}

	.section_title {
		margin-bottom: 0;
	}

	&[data-aos*="fade-"] {
		overflow-x: hidden;
	}

	.section_subtitle {
		margin-top: 5px;
		margin-bottom: $gap-small;
		font-size: 1.2rem !important;
		font-family: $font-copy !important;
		color: $accent;
		font-weight: 200;

		@include bp(m) {
			font-size: 1.4rem !important;
		}

		@include bp(xl) {
			margin-bottom: $gap-large;
		}
	}

	.inner {
		max-width: $max-contentWidth;
		margin: auto;
		width: 100%;
		@extend %container-padding;

		.section_top {
			margin-bottom: $gap-small;

			@include bp(m) {
				margin-bottom: $gap-large;
			}
		}
	}

	&.coloured-section {
		*:not(.section_subtitle) {
			color: $color-text;
		}

		background: $secondary;
		background-color: $secondary;
	}

	.lead-section {
		
	}

	&.no-padding-section {
		padding: 0 !important;
	}
}

